# FCCDetectors

Detector/: CMakeLists.txt
Detector/DetFCCeeCLD/compact/FCCee_o2_v02/: ECalBarrel.xml  ECalEndcap.xml  FCCee_ECalOnly_o2_v02.xml
Detector/DetFCCeeCLD/src/: CLD_GenericCalBarrel_o1_v01_geo.cpp
Detector/DetPar04/: CMakeLists.txt
Detector/DetPar04/compact/: Par04_fullsim.xml
Detector/DetPar04/src/: SandwichCylinders_geo.cpp
Detector/DetPar04/tests/: geant_fullsim_par04.py
Detector/DetSensitive/include/DetSensitive/: DynamicMeshCalorimeterSD.h
Detector/DetSensitive/src/: DynamicMeshCalorimeterSD.cpp  SDWrapper.cpp
